# AutoRoomba

./: CMakeLists.txt  README.md  package.xml
include/auto_roomba/: roombaWalker.hpp
launch/: roomba.launch
results/: cppcheck.txt  cpplint.txt
src/: main.cpp  roombaWalker.cpp
